--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.dubsmash.volley:library:2.0.1'
+//    implementation 'com.dubsmash.volley:library:2.0.1'
+    implementation 'com.android.volley:volley:1.1.0'
 }
